--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-    background: oklch(14.1% 0.005 285.823);
+    background-color: oklch(15.5% 0 0);
     font-family: 'Prompt', sans-serif;
 }
 
